<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".fragments.EditEventFragment">


    <Button
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:text="@string/close"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_event_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/new_event_text_view"
    />
    <TextView
            android:id="@+id/new_event_text_view"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:text="@string/new_event"
            android:gravity="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_event_title_text_view"
            app:layout_constraintStart_toEndOf="@id/close_button"
            app:layout_constraintEnd_toStartOf="@id/publish_button"
    />
    <Button
            android:id="@+id/publish_button"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:text="@string/publish"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_event_title_text_view"
            app:layout_constraintStart_toEndOf="@id/new_event_text_view"
            app:layout_constraintEnd_toEndOf="parent"
    />


    <TextView
            android:id="@+id/edit_event_title_text_view"
            android:layout_width="100sp"
            android:layout_height="44sp"
            android:text="@string/title"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/close_button"
            app:layout_constraintBottom_toTopOf="@id/edit_event_start_date_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/event_title_edit_text"
    />
    <EditText
            android:id="@+id/event_title_edit_text"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:hint="@string/title"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/close_button"
            app:layout_constraintBottom_toTopOf="@id/edit_event_start_date_text_view"
            app:layout_constraintStart_toEndOf="@id/edit_event_title_text_view"
            app:layout_constraintEnd_toEndOf="parent"

    />

    <TextView
            android:id="@+id/edit_event_start_date_text_view"
            android:layout_width="100sp"
            android:layout_height="44sp"
            android:text="@string/start_date"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_event_title_text_view"
            app:layout_constraintBottom_toTopOf="@id/edit_event_end_date_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/event_start_date_button"
    />
    <Button
            android:id="@+id/event_start_date_button"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/event_title_edit_text"
            app:layout_constraintBottom_toTopOf="@id/edit_event_end_date_text_view"
            app:layout_constraintStart_toEndOf="@id/edit_event_start_date_text_view"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/edit_event_end_date_text_view"
            android:layout_width="100sp"
            android:layout_height="44sp"
            android:text="@string/end_date"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_event_start_date_text_view"
            app:layout_constraintBottom_toTopOf="@id/edit_event_location_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/event_end_date_button"
    />
    <Button
            android:id="@+id/event_end_date_button"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/event_start_date_button"
            app:layout_constraintBottom_toTopOf="@id/edit_event_location_text_view"
            app:layout_constraintStart_toEndOf="@id/edit_event_end_date_text_view"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/edit_event_location_text_view"
            android:layout_width="100sp"
            android:layout_height="44sp"
            android:text="@string/location"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_event_end_date_text_view"
            app:layout_constraintBottom_toTopOf="@id/edit_event_description_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/event_location_edit_text"
    />
    <EditText
            android:id="@+id/event_location_edit_text"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:hint="@string/location"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/event_end_date_button"
            app:layout_constraintBottom_toTopOf="@id/edit_event_description_text_view"
            app:layout_constraintStart_toEndOf="@id/edit_event_location_text_view"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/edit_event_description_text_view"
            android:layout_width="100sp"
            android:layout_height="44sp"
            android:text="@string/description"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_event_location_text_view"
            app:layout_constraintBottom_toTopOf="@id/edit_event_host_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/event_description_edit_text"
    />
    <EditText
            android:id="@+id/event_description_edit_text"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:hint="@string/description"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/event_location_edit_text"
            app:layout_constraintBottom_toTopOf="@id/event_host_edit_text"
            app:layout_constraintStart_toEndOf="@id/edit_event_description_text_view"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/edit_event_host_text_view"
            android:layout_width="100sp"
            android:layout_height="44sp"
            android:text="@string/host"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_event_description_text_view"
            app:layout_constraintBottom_toTopOf="@id/event_photos_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/event_host_edit_text"
    />
    <EditText
            android:id="@+id/event_host_edit_text"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:hint="@string/host"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/event_description_edit_text"
            app:layout_constraintBottom_toTopOf="@id/event_photos_button"
            app:layout_constraintStart_toEndOf="@id/edit_event_host_text_view"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
            android:id="@+id/event_photos_button"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:text="@string/photo"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_event_host_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
            android:id="@+id/event_tags_button"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:text="@string/categories"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/event_photos_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <FrameLayout
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:background="#20000000">
            <ProgressBar
                    android:id="@+id/pBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="2dp"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>